# funAD

./: .gitignore  PYPI_NOTE.md  README.md  Untitled.ipynb  code_cov.yml  example.py  install.sh  pyproject.toml  setup.cfg  test.yml  zyREADME.md
.github/workflows/: code_cov.yml  coverage.yml  test.yml
docs/: .gitignore  dummy  milestone1.ipynb  milestone2.ipynb  milestone2_progress.ipynb
funAD/: pyproject.toml
funAD/src/funAD/: dual_number.py  function.py  operations.py  temp.py
funAD/tests/: check_coverage.py  run_tests.sh  test_function.py
src/: .gitignore
src/funAD/: .gitignore  dual_number.py  function.py  operations.py  optimizers.py  temp.py  tempfortest.py
src/funAD/.ipynb_checkpoints/: function-checkpoint.py
tests/: check_coverage.sh  coverage_status.sh  run_tests.sh  test_dualnumber.py  test_function.py  test_operations.py  test_optimizers.py
